--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-contexify": "^4.1.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "spotify-web-api-js": "^1.5.0"
